--- a/gb_attention_msgs/package.xml
+++ b/gb_attention_msgs/package.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>gb_attention_msgs</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The gb_attention_msgs package</description>
 
   <maintainer email="fmrico@gmail.com">Francisco Martín</maintainer>
 
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>geometry_msgs</build_export_depend>
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>builtin_interfaces</depend>
+  <depend>rosidl_default_generators</depend>
 
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
