New interface for Attention based on BTs
Signed-off-by: Francisco Martín Rico <fmrico@gmail.com>

--- a/gb_attention/CMakeLists.txt
+++ b/gb_attention/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(gb_attention)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Debug)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -11,13 +12,12 @@ find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(gb_attention_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(ros2_knowledge_graph REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(trajectory_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
-find_package(ros2_knowledge_graph_plugins REQUIRED)
+find_package(behaviortree_cpp_v3 REQUIRED)
 
 set(dependencies
   rclcpp
@@ -27,13 +27,12 @@ set(dependencies
   geometry_msgs
   gb_attention_msgs
   sensor_msgs
-  ros2_knowledge_graph
   tf2
   tf2_ros
   tf2_geometry_msgs
   trajectory_msgs
   visualization_msgs
-  ros2_knowledge_graph_plugins
+  behaviortree_cpp_v3
 )
 
 include_directories(
@@ -41,7 +40,6 @@ include_directories(
 )
 
 add_library(${PROJECT_NAME} SHARED
-  src/gb_attention/AttentionClientNode.cpp
   src/gb_attention/AttentionServerNode.cpp
   src/gb_attention/OptimizedAttentionServerNode.cpp
   src/gb_attention/RoundRobinAttentionServerNode.cpp
@@ -53,13 +51,17 @@ add_executable(attention_server src/attention_server.cpp)
 ament_target_dependencies(attention_server ${dependencies})
 target_link_libraries(attention_server ${PROJECT_NAME})
 
-add_executable(attention_client src/attention_client.cpp)
-ament_target_dependencies(attention_client ${dependencies})
-target_link_libraries(attention_client ${PROJECT_NAME})
+add_library(gb_attention_scan_bt_node SHARED src/behavior_tree_nodes/Scan.cpp)
+list(APPEND plugin_libs gb_attention_scan_bt_node)
 
-add_executable(attention_manager src/attention_manager.cpp)
-ament_target_dependencies(attention_manager ${dependencies})
-target_link_libraries(attention_manager ${PROJECT_NAME})
+add_library(gb_attention_track_bt_node SHARED src/behavior_tree_nodes/Track.cpp)
+list(APPEND plugin_libs gb_attention_track_bt_node)
+
+foreach(bt_plugin ${plugin_libs})
+  ament_target_dependencies(${bt_plugin} ${dependencies})
+  target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
+endforeach()
+
 
 install(DIRECTORY include/
   DESTINATION include/
@@ -70,8 +72,7 @@ install(DIRECTORY launch params DESTINATION share/${PROJECT_NAME})
 install(TARGETS
   ${PROJECT_NAME}
   attention_server
-  attention_client
-  attention_manager
+  ${plugin_libs}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
