--- a/gb_attention/package.xml
+++ b/gb_attention/package.xml
@@ -19,13 +19,12 @@
   <depend>geometry_msgs</depend>
   <depend>gb_attention_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>ros2_knowledge_graph</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>trajectory_msgs</depend>
   <depend>visualization_msgs</depend>
-  <depend>ros2_knowledge_graph_plugins</depend>
+  <depend>behaviortree_cpp_v3</depend>
   
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
