--- a/attention_system_msgs/CMakeLists.txt
+++ b/attention_system_msgs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(gb_attention_msgs)
+project(attention_system_msgs)
 
 find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
