--- a/attention_system_msgs/package.xml
+++ b/attention_system_msgs/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>gb_attention_msgs</name>
+  <name>attention_system_msgs</name>
   <version>0.0.1</version>
-  <description>The gb_attention_msgs package</description>
+  <description>The attention_system_msgs package</description>
 
-  <maintainer email="fmrico@gmail.com">Francisco Martín</maintainer>
+  <maintainer email="albertogarciagomezjacinto@gmail.com">Alberto García</maintainer>
 
   <license>BSD</license>
 
