Updated package.xml and lifecycle nodes to transition manually
Signed-off-by: aaggj <albertogarciagomezjacinto@gmail.com>

--- a/attention_system/package.xml
+++ b/attention_system/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.1</version>
   <description>Paquete sistema de atención</description>
 
-  <maintainer email="albertogarciagomezjacinto@gmail.com">Alberto</maintainer>
+  <maintainer email="albertogarciagomezjacinto@gmail.com">Alberto García</maintainer>
   <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
   <license>GPLv3</license>
   <url type="website">https://intelligentroboticslab.gsyc.urjc.es/</url>
