--- a/attention_system/package.xml
+++ b/attention_system/package.xml
@@ -15,11 +15,13 @@
 
   <depend>rclcpp</depend>
   <depend>rclcpp_cascade_lifecycle</depend>
+  <depend>rclcpp_action</depend>
   <depend>lifecycle_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>attention_system_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>control_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
