--- a/attention_system_msgs/CMakeLists.txt
+++ b/attention_system_msgs/CMakeLists.txt
@@ -8,7 +8,8 @@ find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/AttentionPoints.msg" 
+  "msg/AttentionPoints.msg"
+  "msg/PanTiltCommand.msg"
   DEPENDENCIES builtin_interfaces std_msgs geometry_msgs
 )
 
