--- a/attention_system/CMakeLists.txt
+++ b/attention_system/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_cascade_lifecycle REQUIRED)
 find_package(rclcpp_action REQUIRED)
+find_package(rclcpp_lifecycle REQUIRED)
 find_package(lifecycle_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
@@ -25,6 +26,7 @@ set(dependencies
   rclcpp
   rclcpp_cascade_lifecycle
   rclcpp_action
+  rclcpp_lifecycle
   lifecycle_msgs
   std_msgs
   geometry_msgs
